<resources>
    <string name="app_name">DoItList</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="title_activity_navigation">NavigationActivity</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_example">Example action</string>

    <string name="action_settings">Settings</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="default_time_spent_label">00 h, 00 min</string>
    <string name="divider_label"><![CDATA[<]]></string>
    <string name="recommendation_item_separator">,</string>
    <string name="course_default">Course Scope</string>
    <string name="task_name_default">Task Name</string>
    <string name="task_info_button_desc">Click to open details about a task</string>
    <string name="task_finish_button_desc">Click to mark a task as completed</string>
    <string name="status_label_default">status</string>
    <string name="lbl_hide_calendar">Hide calendar</string>
    <string name="lbl_reveal_calendar">Reveal Calendar</string>
    <string name="date_full_default">Today, 00:00</string>
    <string name="date_default">Dec 8, 2018</string>
    <string name="lbl_course_selection_hide">Hide course selection</string>
    <string name="lbl_course_selection_reveal">Reveal course selection</string>
    <string name="lbl_no_courses">Add a course first</string>
    <string name="lbl_no_categories">Add a category first</string>
</resources>
