<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:scrollbars="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RelativeLayout
                android:id="@+id/lytCCSelection"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:animateLayoutChanges="true"
                android:background="@color/colorAccentLight">

                <Button
                    android:id="@+id/btnDisplayCalendar"
                    style="@style/Widget.MaterialComponents.Button.TextButton.Icon"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true"
                    android:onClick="displayCourseSelection"
                    android:paddingStart="0dp"
                    android:paddingTop="0dp"
                    android:paddingEnd="0dp"
                    android:paddingBottom="0dp"
                    android:text="@string/lbl_course_selection_hide" />

                <LinearLayout
                    android:id="@+id/lytCourseSelection"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/btnDisplayCalendar"
                    android:layout_marginHorizontal="20dp"
                    android:layout_marginBottom="20dp"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/lblCoursesNoItems"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:text="@string/lbl_no_courses" />

                        <android.support.v7.widget.RecyclerView
                            android:id="@+id/rvCourses"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:background="@drawable/roundeditem_stroke"
                            android:paddingTop="4dp"
                            android:paddingBottom="4dp"
                            android:visibility="gone" />

                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/lytCourseLevelDivider"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="0"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <ImageView
                            android:id="@+id/imageView3"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:tint="@color/colorPrimaryDark"
                            app:srcCompat="@drawable/sublevel_icon" />

                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/lytCourseCategory"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/lblCategoriesNoItems"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:text="@string/lbl_no_categories" />

                        <android.support.v7.widget.RecyclerView
                            android:id="@+id/rvCategories"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:background="@drawable/roundeditem_stroke"
                            android:paddingTop="4dp"
                            android:paddingBottom="4dp"
                            android:visibility="gone" />

                    </LinearLayout>

                </LinearLayout>

            </RelativeLayout>

            <LinearLayout
                android:id="@+id/lytDateInfo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/lytCCSelection"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="20dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/txtDate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/course_default"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6" />

                <ImageView
                    android:id="@+id/imageView4"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="0"
                    android:tint="@android:color/darker_gray"
                    app:srcCompat="@drawable/time_est_icon" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="0"
                    android:gravity="center"
                    android:text=" remain: "
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle2"
                    android:textColor="@android:color/darker_gray" />

                <TextView
                    android:id="@+id/txtTasksRemainTotal"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="0"
                    android:gravity="center"
                    android:text="@string/default_time_spent_label"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle2"
                    android:textColor="@android:color/darker_gray" />

            </LinearLayout>

            <android.support.v7.widget.RecyclerView
                android:id="@+id/listTasks"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/lytDateInfo" />
        </RelativeLayout>
    </android.support.v4.widget.NestedScrollView>

</RelativeLayout>